--- a/style.css
+++ b/style.css
@@ -594,11 +594,14 @@ footer {
 
 @media (max-width: 480px) {
   .logoImage {
-    height: 40px;
+    height: 35px;
   }
 
   .logoTitle {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    margin-left: 10px;
+
+
   }
 
   .container {
